--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,6 +137,11 @@ jobs:
     - name: Cloning Radare2 git repository
       run: git clone --depth=1 https://github.com/radareorg/radare2
     - name: Building Radare2 pkg for macOS
+      env:
+        ARCHFLAGS: '-arch arm64'
+        CC: 'gcc -arch arm64'
+        CXXFLAGS: '-arch arm64'
+        CFLAGS: '-arch arm64'
       run: make -C radare2/dist/macos
     - name: Install radare2 Package
       run: sudo installer -pkg radare2/dist/macos/*.pkg -target /
