--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,7 +157,7 @@ jobs:
         mkdir destdir
         copy w\*.dll destdir
         cd destdir
-        zip -r ..\r2ghidra-w64.zip *
+        python -m zipfile -c ..\r2ghidra-w64.zip *
     - uses: actions/upload-artifact@v2
       with:
         name: r2ghidra-${{env.R2V}}-w64.zip
