--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,6 +168,15 @@ jobs:
       - linux-acr-ok
       - macos-acr-x64
       - w64
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Download all git history and tags
+      - name: Check if is a release
+        run: git describe --exact-match --tags ${{ github.sha }} | awk 'BEGIN{tag="-";r="no"}/^[0-9]+\.[0-9]+/{tag=$0;r="yes"};END{print "::set-output name=is::"r;print "::set-output name=tag::"tag}'
+        id: release
   release:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && needs.check_release.outputs.is_release == 'yes' }}
     needs:
@@ -182,7 +191,7 @@ jobs:
         run: echo "##[set-output name=branch;]$( ./configure -qV )"
         id: r2gv
       - name: Prepare release notes
-        run: ./sys/release-notes.sh | tee ./RELEASE_NOTES.md
+        run: echo Release > ./RELEASE_NOTES.md
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
@@ -194,7 +203,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.check_release.outputs.tag_name }}
-          release_name: ${{ env.R2V }}
+          release_name: ${{ steps.r2gv.outputs.branch }}
           body_path: ./RELEASE_NOTES.md
           draft: false
           prerelease: false
