--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,7 @@ jobs:
       tag_name: ${{ steps.release.outputs.tag }}
     needs:
       - linux-acr-ok
-      - macos-acr-x64
+      - macos-acr-ok
       - w64
     runs-on: ubuntu-latest
     steps:
