Fix assets filenames for the release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,7 +118,7 @@ jobs:
       run: |
         r2 -qc 'af;pdg' test/bins/rec | tee a.txt
         grep csu_init a.txt
-    - name: Pub
+    - name: Uploading artifacts
       uses: actions/upload-artifact@v3
       with:
         name: macos-acr-ok
@@ -221,16 +221,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/macos-acr-ok/r2ghidra_${{ steps.r2gv.outputs.branch }}_macos.tar.gz
-          asset_name: r2ghidra_${{ steps.r2gv.outputs.branch }}_macos.tar.gz
-          asset_content_type: application/tar+gzip
+          asset_path: dist/artifacts/macos-acr-ok/r2ghidra-${{ steps.r2gv.outputs.branch }}-macos.zip
+          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-macos.zip
+          asset_content_type: application/zip
       - name: Upload asset for Windows (w64)
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/w64/r2ghidra-${{ steps.r2gv.outputs.branch }}-w64.zip
+          asset_path: dist/artifacts/w64/r2ghidra-w64.zip
           asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-w64.zip
           asset_content_type: application/zip
       - name: Upload asset for Sleigh files
