--- a/meson.build
+++ b/meson.build
@@ -192,7 +192,7 @@ sleighc_sources = [
   ghidra_decompiler_sources,
 ]
 
-r2ghidra_core_plugin = library('core_r2ghidra',
+r2ghidra_core_plugin = library('r2ghidra',
   r2ghidra_core_sources,
   dependencies: [r_core],
   override_options : ['c_std=c11', 'cpp_std=c++11'],
@@ -201,7 +201,7 @@ r2ghidra_core_plugin = library('core_r2ghidra',
   install_dir: r2_plugdir
 )
 
-sleighc_exe = executable('sleighc', sleighc_sources,
+sleighc_exe = executable('r2ghidra-sleighc', sleighc_sources,
   include_directories: r2ghidra_incdirs,
   override_options : ['c_std=c11', 'cpp_std=c++11'],
   dependencies: [r_core],
