Fix build for latest r2 r_anal_esil -> r_esil

--- a/meson.build
+++ b/meson.build
@@ -56,6 +56,9 @@ if cpp.get_id() == 'msvc'
     cpp.find_library('r_io', dirs: r2libdir),
     cpp.find_library('r_bin', dirs: r2libdir),
     cpp.find_library('r_cons', dirs: r2libdir),
+# cpp.find_library('r_esil', dirs: r2libdir),
+# cpp.find_library('r_arch', dirs: r2libdir),
+    cpp.find_library('r_asm', dirs: r2libdir),
     cpp.find_library('r_flag', dirs: r2libdir),
     cpp.find_library('r_reg', dirs: r2libdir),
     cpp.find_library('r_util', dirs: r2libdir),
